[Fix] store switcher not showing all stores if the height is bigger than 250px

--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/actions-bar/_store-switcher.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/actions-bar/_store-switcher.less
@@ -39,7 +39,6 @@
     .dropdown-menu {
         left: 0;
         margin-top: .5em;
-        max-height: 250px;
         overflow-y: auto;
         padding-top: .25em;
 
